# SocialApp-Rebuilt-

./: CMakeLists.txt  README.md  camerahandler.cpp  vcpkg.json
.github/workflows/: build_android.yml
Core/: databasehandler.h
android/: AndroidManifest.xml
app/: CMakeLists.txt  main.cpp
core/: camerahandler.h  databasehandler.cpp  databasehandler.h
github/workflows/: build_android.yml
ui/: main.qml
